--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hapi/joi": "^17.1.1",
     "@tanstack/react-query": "^4.29.12",
     "@types/node": "20.3.0",
     "@types/react": "18.2.11",
@@ -23,5 +24,8 @@
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3",
     "zod": "^3.21.4"
+  },
+  "devDependencies": {
+    "@types/hapi__joi": "^17.1.9"
   }
 }
