--- a/package.json
+++ b/package.json
@@ -10,15 +10,18 @@
   },
   "dependencies": {
     "@hapi/joi": "^17.1.1",
+    "@prisma/client": "^4.15.0",
     "@tanstack/react-query": "^4.29.12",
     "@types/node": "20.3.0",
     "@types/react": "18.2.11",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
+    "bcrypt": "^5.1.0",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.4",
     "next": "13.4.4",
     "postcss": "8.4.24",
+    "prisma": "^4.15.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.2",
@@ -26,6 +29,7 @@
     "zod": "^3.21.4"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/hapi__joi": "^17.1.9"
   }
 }
