--- a/package.json
+++ b/package.json
@@ -1,36 +1,37 @@
 {
-  "name": "my-saas",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@hapi/joi": "^17.1.1",
-    "@prisma/client": "^4.15.0",
-    "@tanstack/react-query": "^4.29.12",
-    "@types/node": "20.3.0",
-    "@types/react": "18.2.11",
-    "@types/react-dom": "18.2.4",
-    "autoprefixer": "10.4.14",
-    "axios": "^1.4.0",
-    "bcrypt": "^5.1.0",
-    "eslint": "8.42.0",
-    "eslint-config-next": "13.4.4",
-    "next": "13.4.4",
-    "postcss": "8.4.24",
-    "prisma": "^4.15.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "tailwindcss": "3.3.2",
-    "typescript": "5.1.3",
-    "zod": "^3.21.4"
-  },
-  "devDependencies": {
-    "@types/bcrypt": "^5.0.0",
-    "@types/hapi__joi": "^17.1.9"
-  }
+    "name": "my-saas",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint"
+    },
+    "dependencies": {
+        "@hapi/joi": "^17.1.1",
+        "@prisma/client": "^4.15.0",
+        "@tanstack/react-query": "^4.29.12",
+        "@types/node": "20.3.0",
+        "@types/react": "18.2.11",
+        "@types/react-dom": "18.2.4",
+        "autoprefixer": "10.4.14",
+        "axios": "^1.4.0",
+        "bcrypt": "^5.1.0",
+        "eslint": "8.42.0",
+        "eslint-config-next": "13.4.4",
+        "next": "13.4.4",
+        "next-auth": "^4.22.1",
+        "postcss": "8.4.24",
+        "prisma": "^4.15.0",
+        "react": "18.2.0",
+        "react-dom": "18.2.0",
+        "tailwindcss": "3.3.2",
+        "typescript": "5.1.3",
+        "zod": "^3.21.4"
+    },
+    "devDependencies": {
+        "@types/bcrypt": "^5.0.0",
+        "@types/hapi__joi": "^17.1.9"
+    }
 }
