--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "@chakra-ui/react": "^2.7.1",
+        "@emotion/react": "^11.11.1",
+        "@emotion/styled": "^11.11.0",
         "@hapi/joi": "^17.1.1",
         "@prisma/client": "^4.15.0",
         "@tanstack/react-query": "^4.29.12",
@@ -20,6 +23,7 @@
         "bcrypt": "^5.1.0",
         "eslint": "8.42.0",
         "eslint-config-next": "13.4.4",
+        "framer-motion": "^10.12.16",
         "next": "13.4.3",
         "next-auth": "^4.22.1",
         "postcss": "8.4.24",
