--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "prisma": "^4.15.0",
         "react": "18.2.0",
         "react-dom": "18.2.0",
+        "stripe": "^12.11.0",
         "tailwindcss": "3.3.2",
         "typescript": "5.1.3",
         "zod": "^3.21.4"
